--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cypress": "^13.3.3",
     "cypress-multi-reporters": "^1.6.2",
     "fs-extra": "^10.1.0",
+    "jest": "^29.7.0",
     "jsdom": "^21.1.0",
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
