--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@trybe/eslint-config-frontend": "^1.11.3",
+    "@types/jest": "^29.5.6",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react-swc": "^3.1.0",
     "@vitest/coverage-c8": "^0.30.1",
