--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "cy": "env CY_CLI=true cypress run",
@@ -48,6 +50,7 @@
     "@trybe/eslint-config-frontend": "^1.11.3",
     "@types/jest": "^29.5.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-slick": "^0.23.11",
     "@vitejs/plugin-react-swc": "^3.1.0",
     "@vitest/coverage-c8": "^0.30.1",
     "cross-env": "^7.0.3",
