--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "history": "^5.3.0",
+    "matchmedia-polyfill": "^0.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
