--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "gh-pages": "^6.1.1",
     "history": "^5.3.0",
     "matchmedia-polyfill": "^0.3.2",
     "prop-types": "^15.8.1",
@@ -18,6 +19,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
+  "homepage": "https://username.github.io/app-toot-name",
   "scripts": {
     "cy": "env CY_CLI=true cypress run",
     "cy:open": "cypress open --e2e --browser chrome",
@@ -29,7 +31,9 @@
     "start": "vite --open --port 3000",
     "preview": "vite preview",
     "coverage": "vitest run --coverage --watch=false",
-    "cy-coverage": "cross-env NODE_OPTIONS=- vitest run --coverage --watch=false"
+    "cy-coverage": "cross-env NODE_OPTIONS=- vitest run --coverage --watch=false",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
